--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.2",
     "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "^9.8.0",
-    "eslint-plugin-github": "^4.1.2",
-    "eslint-plugin-jest": "^28.6.0",
+    "eslint": "^8.8.0",
+    "eslint-plugin-github": "^5.0.1",
+    "eslint-plugin-jest": "^28.8.0",
     "jest": "^29.7.0",
     "jest-circus": "^29.7.0",
     "js-yaml": "^4.1.0",
