--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
-    "@octokit/rest": "^21.0.2"
+    "@octokit/rest": "^21.0.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^22.4.1",
-    "@typescript-eslint/parser": "^8.2.0",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.8.0",
     "eslint-plugin-github": "^5.0.1",
@@ -43,6 +45,6 @@
     "js-yaml": "^4.1.0",
     "prettier": "3.3.3",
     "ts-jest": "^29.2.4",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   }
 }
