--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          coverage_report_path: "path"
+          coverage_report_path: "path.xml"
           github_token: "ABCD"
